refactor: Remove javafx